refactorings and IsDraw reactivated